# nuclex-opusenc

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  build.cmd  config.h  nuclex-opusenc (msvc-14.2).vcxproj  nuclex-opusenc (msvc-14.2).vcxproj.filters
